--- a/src/life-app/life-app.html
+++ b/src/life-app/life-app.html
@@ -154,142 +154,151 @@
         },
       },
 
+      gameManager: {},
+
+      getCellStateAt: function (x, y){
+        if( x < 0 || y < 0 || x >= this.gameManager.CELL_LENGTH || y >= this.gameManager.CELL_LENGTH ){
+          return 0;
+        }
+        return this.gameManager.cells[ x + y * this.gameManager.CELL_LENGTH]._state;
+      },
+      getCellAt: function (x, y){
+        if( x < 0 || y < 0 || x >= this.gameManager.CELL_LENGTH || y >= this.gameManager.CELL_LENGTH ){
+          return null;
+        }
+        return this.gameManager.cells[ x + y * this.gameManager.CELL_LENGTH];
+      },
+
+      Cell: function(x, y, _this){
+        this.x = x;
+        this.y = y;
+        this.state = 0; //dead => not colored
+        this._state = 0; //cache
+
+        this.parentNode = _this;
+
+
+        this.draw = function(){
+          if(this.state){
+            this.parentNode.gameManager.context.fillStyle = '#ff0000';
+            this.parentNode.gameManager.context.fillRect(this.x * this.parentNode.gameManager.CELL_SIZE, this.y * this.parentNode.gameManager.CELL_SIZE, this.parentNode.gameManager.CELL_SIZE, this.parentNode.gameManager.CELL_SIZE);
+          }
+        }
+
+        this.update = function(){
+          var aliveCount = 0;
+
+          var directions = [[-1, -1], [0, -1], [1, -1],
+                            [-1, 0], [1, 0],
+                            [-1, 1], [0, 1], [1, 1]];
+          directions.forEach(function(d){
+            // aliveCount += getCellAt(this.x + d[0], this.y + d[1]).state;
+            aliveCount += this.parentNode.getCellStateAt(this.x + d[0], this.y + d[1]);
+          }.bind(this));
+
+          if(this._state){ //1, alive
+            if(aliveCount <= 1 || aliveCount >= 4){
+              this.state = 0;
+            }
+            // else{
+            //   this.state = 1;
+            // }
+          }
+          else{ // 0, dead
+            if(aliveCount === 3){
+              this.state = 1;
+            }
+            // else{
+            //   this.state = 0;
+            // }
+          }
+        }
+
+      },
+
+
       ready: function() {
         console.log(this.prop1);
 
 
-        var canvas;
-        var context;
-        var CANVAS_SIZE = 600;
-        var CELL_SIZE = 4;
-        var CELL_LENGTH = CANVAS_SIZE / CELL_SIZE;
-        canvas = document.getElementById('canvas');
-        this.canvas = canvas;
-        context = canvas.getContext('2d');
-        this.context = context;
+        // var canvas;
+        // var context;
+        // var CANVAS_SIZE = 600;
+        // var CELL_SIZE = 4;
+        // var CELL_LENGTH = CANVAS_SIZE / CELL_SIZE;
+        // canvas = document.getElementById('canvas');
+        // this.canvas = canvas;
+        // context = canvas.getContext('2d');
+        // this.context = context;
+        //
+        // var cells = new Array(CELL_LENGTH * CELL_LENGTH);
+        // this.cells = cells;
+        this.gameManager.CANVAS_SIZE = 600;
+        this.gameManager.CELL_SIZE = 4;
+        this.gameManager.CELL_LENGTH = Math.floor(this.gameManager.CANVAS_SIZE / this.gameManager.CELL_SIZE);
+        // canvas = document.getElementById('canvas');
+        this.gameManager.canvas = document.getElementById('canvas');
+        this.gameManager.context = canvas.getContext('2d');
 
-        var cells = new Array(CELL_LENGTH * CELL_LENGTH);
-        this.cells = cells;
-
-
-
-        function getCellStateAt(x, y){
-          if( x < 0 || y < 0 || x >= CELL_LENGTH || y >= CELL_LENGTH ){
-            return 0;
-          }
-          return cells[ x + y * CELL_LENGTH]._state;
-        }
-        function getCellAt(x, y){
-          if( x < 0 || y < 0 || x >= CELL_LENGTH || y >= CELL_LENGTH ){
-            return null;
-          }
-          return cells[ x + y * CELL_LENGTH];
-        }
-
-        Cell = function(x, y){
-          this.x = x;
-          this.y = y;
-          this.state = 0; //dead => not colored
-          this._state = 0; //cache
+        this.gameManager.cells = new Array(this.gameManager.CELL_LENGTH * this.gameManager.CELL_LENGTH);
 
 
-          this.draw = function(){
-            if(this.state){
-              context.fillStyle = '#ff0000';
-              context.fillRect(this.x * CELL_SIZE, this.y * CELL_SIZE, CELL_SIZE, CELL_SIZE);
-              // console.log("fill!! " + x + " : " + y);
-            }
-          }
-          // this.prepareUpdate = function(){
-          //   this._state = this.state;
-          // }
-
-          this.update = function(){
-            var aliveCount = 0;
-
-            var directions = [[-1, -1], [0, -1], [1, -1],
-                              [-1, 0], [1, 0],
-                              [-1, 1], [0, 1], [1, 1]];
-            directions.forEach(function(d){
-              // aliveCount += getCellAt(this.x + d[0], this.y + d[1]).state;
-              aliveCount += getCellStateAt(this.x + d[0], this.y + d[1]);
-            }.bind(this));
-
-            if(this._state){ //1, alive
-              if(aliveCount <= 1 || aliveCount >= 4){
-                this.state = 0;
-              }
-              // else{
-              //   this.state = 1;
-              // }
-            }
-            else{ // 0, dead
-              if(aliveCount === 3){
-                this.state = 1;
-              }
-              // else{
-              //   this.state = 0;
-              // }
-            }
-          }
-
-        }
-
-
-        for(var i=0; i < cells.length; i++){
-          cells[i] = new Cell( i % CELL_LENGTH, Math.floor(i / CELL_LENGTH ));
+        for(var i=0; i < this.gameManager.cells.length; i++){
+          this.gameManager.cells[i] = new this.Cell( i % this.gameManager.CELL_LENGTH, Math.floor(i / this.gameManager.CELL_LENGTH ), this);
           if( Math.random() > 0.5){
-            cells[i].state = 1;
+            this.gameManager.cells[i].state = 1;
           }
         }
 
-        getCellAt( 100 + 1, 100 +0 ).state = 1;
-        getCellAt( 100 +2, 100 +1 ).state = 1;
-        getCellAt( 100 +0, 100 +2 ).state = 1;
-        getCellAt( 100 +1, 100 +2 ).state = 1;
-        getCellAt( 100 +2, 100 +2 ).state = 1;
+        this.getCellAt( 100 + 1, 100 +0 ).state = 1;
+        this.getCellAt( 100 +2, 100 +1 ).state = 1;
+        this.getCellAt( 100 +0, 100 +2 ).state = 1;
+        this.getCellAt( 100 +1, 100 +2 ).state = 1;
+        this.getCellAt( 100 +2, 100 +2 ).state = 1;
 
 
 
 
 
-        var isDrawing = false;
+        this.gameManager.isDrawing = false;
+
+        var _this = this;
 
         function onMouseMove(e){
-          if (!isDrawing) return;
+          if (!_this.gameManager.isDrawing) return;
           var rect = e.target.getBoundingClientRect();
           x = e.clientX - rect.left;
           y = e.clientY - rect.top;
-          getCellAt(Math.floor(x / CELL_SIZE), Math.floor(y / CELL_SIZE)).state = 1;
+          _this.getCellAt(Math.floor(x / _this.gameManager.CELL_SIZE), Math.floor(y / _this.gameManager.CELL_SIZE)).state = 1;
         };
         function onMouseUp(e){
-          isDrawing = false;
+          _this.gameManager.isDrawing = false;
         }
         function onMouseDown(e){
-          isDrawing = true;
+          _this.gameManager.isDrawing = true;
         }
         // canvas.addEventListener('click', onClick, false);
-        canvas.addEventListener('mousemove', onMouseMove, false);
-        canvas.addEventListener('mousedown', onMouseDown, false);
-        canvas.addEventListener('mouseup', onMouseUp, false);
+        this.gameManager.canvas.addEventListener('mousemove', onMouseMove, false);
+        this.gameManager.canvas.addEventListener('mousedown', onMouseDown, false);
+        this.gameManager.canvas.addEventListener('mouseup', onMouseUp, false);
 
 
         this.mainLoop();
       },
 
       mainLoop: function(){
-        this.context.fillStyle = '#eeeeee';
-        this.context.fillRect(0, 0, canvas.width, canvas.height);
+        this.gameManager.context.fillStyle = '#eeeeee';
+        this.gameManager.context.fillRect(0, 0, canvas.width, canvas.height);
 
 
-        this.cells.forEach(function(c){
+        this.gameManager.cells.forEach(function(c){
           c._state = c.state;
           c.draw();
         });
         // cells.forEach(function(c){
         //   c.prepareUpdate();
         // });
-        this.cells.forEach(function(c){
+        this.gameManager.cells.forEach(function(c){
           c.update();
         });
 
