--- a/src/life-app/life-app.html
+++ b/src/life-app/life-app.html
@@ -3,142 +3,6 @@
 <dom-module id="life-app">
   <template>
     <canvas width="600" height="600" id="canvas">Your browser doesn't support html5 canvas.</canvas>
-		<script>
-			// (function(){
-				// var canvas;
-        // var context;
-        // var CANVAS_SIZE = 600;
-        // var CELL_SIZE = 4;
-        // var CELL_LENGTH = CANVAS_SIZE / CELL_SIZE;
-				// canvas = document.getElementById('canvas');
-				// context = canvas.getContext('2d');
-        //
-        // var cells = new Array(CELL_LENGTH * CELL_LENGTH);
-        //
-        //
-        //
-        // function getCellStateAt(x, y){
-        //   if( x < 0 || y < 0 || x >= CELL_LENGTH || y >= CELL_LENGTH ){
-        //     return 0;
-        //   }
-        //   return cells[ x + y * CELL_LENGTH]._state;
-        // }
-        // function getCellAt(x, y){
-        //   if( x < 0 || y < 0 || x >= CELL_LENGTH || y >= CELL_LENGTH ){
-        //     return null;
-        //   }
-        //   return cells[ x + y * CELL_LENGTH];
-        // }
-        //
-        // Cell = function(x, y){
-        //   this.x = x;
-        //   this.y = y;
-        //   this.state = 0; //dead => not colored
-        //   this._state = 0; //cache
-        //
-        //
-        //   this.draw = function(){
-        //     if(this.state){
-        //       context.fillStyle = '#ff0000';
-        //       context.fillRect(this.x * CELL_SIZE, this.y * CELL_SIZE, CELL_SIZE, CELL_SIZE);
-        //       // console.log("fill!! " + x + " : " + y);
-        //     }
-        //   }
-        //   // this.prepareUpdate = function(){
-        //   //   this._state = this.state;
-        //   // }
-        //
-        //   this.update = function(){
-        //     var aliveCount = 0;
-        //
-        //     var directions = [[-1, -1], [0, -1], [1, -1],
-        //                       [-1, 0], [1, 0],
-        //                       [-1, 1], [0, 1], [1, 1]];
-        //     directions.forEach(function(d){
-        //       // aliveCount += getCellAt(this.x + d[0], this.y + d[1]).state;
-        //       aliveCount += getCellStateAt(this.x + d[0], this.y + d[1]);
-        //     }.bind(this));
-        //
-        //     if(this._state){ //1, alive
-        //       if(aliveCount <= 1 || aliveCount >= 4){
-        //         this.state = 0;
-        //       }
-        //       // else{
-        //       //   this.state = 1;
-        //       // }
-        //     }
-        //     else{ // 0, dead
-        //       if(aliveCount === 3){
-        //         this.state = 1;
-        //       }
-        //       // else{
-        //       //   this.state = 0;
-        //       // }
-        //     }
-        //   }
-        //
-        // }
-        //
-        //
-        // for(var i=0; i < cells.length; i++){
-        //   cells[i] = new Cell( i % CELL_LENGTH, Math.floor(i / CELL_LENGTH ));
-        //   if( Math.random() > 0.5){
-        //     cells[i].state = 1;
-        //   }
-        // }
-        //
-        // getCellAt( 100 + 1, 100 +0 ).state = 1;
-        // getCellAt( 100 +2, 100 +1 ).state = 1;
-        // getCellAt( 100 +0, 100 +2 ).state = 1;
-        // getCellAt( 100 +1, 100 +2 ).state = 1;
-        // getCellAt( 100 +2, 100 +2 ).state = 1;
-        //
-        //
-        //
-        // function mainLoop(){
-        //   context.fillStyle = '#eeeeee';
-        //   context.fillRect(0, 0, canvas.width, canvas.height);
-        //
-        //
-        //   cells.forEach(function(c){
-        //     c._state = c.state;
-        //     c.draw();
-        //   });
-        //   // cells.forEach(function(c){
-        //   //   c.prepareUpdate();
-        //   // });
-        //   cells.forEach(function(c){
-        //     c.update();
-        //   });
-        //
-        //   setTimeout(function(){
-        //     this.mainLoop();
-        //   }, 30);
-        // }
-        // mainLoop();
-        //
-        //
-        // var isDrawing = false;
-        //
-        // function onMouseMove(e){
-        //   if (!isDrawing) return;
-        //   var rect = e.target.getBoundingClientRect();
-        //   x = e.clientX - rect.left;
-        //   y = e.clientY - rect.top;
-        //   getCellAt(Math.floor(x / CELL_SIZE), Math.floor(y / CELL_SIZE)).state = 1;
-        // };
-        // function onMouseUp(e){
-        //   isDrawing = false;
-        // }
-        // function onMouseDown(e){
-        //   isDrawing = true;
-        // }
-        // // canvas.addEventListener('click', onClick, false);
-        // canvas.addEventListener('mousemove', onMouseMove, false);
-        // canvas.addEventListener('mousedown', onMouseDown, false);
-        // canvas.addEventListener('mouseup', onMouseUp, false);
-			// })();
-		</script>
     <h2>Hello [[prop1]]</h2>
   </template>
 
@@ -218,25 +82,11 @@
 
 
       ready: function() {
-        console.log(this.prop1);
+        // console.log(this.prop1);
 
-
-        // var canvas;
-        // var context;
-        // var CANVAS_SIZE = 600;
-        // var CELL_SIZE = 4;
-        // var CELL_LENGTH = CANVAS_SIZE / CELL_SIZE;
-        // canvas = document.getElementById('canvas');
-        // this.canvas = canvas;
-        // context = canvas.getContext('2d');
-        // this.context = context;
-        //
-        // var cells = new Array(CELL_LENGTH * CELL_LENGTH);
-        // this.cells = cells;
         this.gameManager.CANVAS_SIZE = 600;
         this.gameManager.CELL_SIZE = 4;
         this.gameManager.CELL_LENGTH = Math.floor(this.gameManager.CANVAS_SIZE / this.gameManager.CELL_SIZE);
-        // canvas = document.getElementById('canvas');
         this.gameManager.canvas = document.getElementById('canvas');
         this.gameManager.context = canvas.getContext('2d');
 
