separate life-app to life-canvas, add injectPattern func

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <link rel="manifest" href="/manifest.json">
     <script src="/bower_components/webcomponentsjs/webcomponents-lite.js"></script>
     <link rel="import" href="/src/life-app/life-app.html">
+    <link rel="import" href="/src/life-canvas/life-canvas.html">
   </head>
   <body>
-    <life-app></life-app>
+    <life-app>
+
+    </life-app>
   </body>
 </html>
