--- a/src/life-canvas/life-canvas.html
+++ b/src/life-canvas/life-canvas.html
@@ -3,7 +3,7 @@
 <dom-module id="life-canvas">
   <template>
     <canvas width="600" height="600" id="canvas">Your browser doesn't support html5 canvas.</canvas>
-    <h2>Hello [[prop1]]</h2>
+    <!-- <h2>Hello [[prop1]]</h2> -->
   </template>
 
   <script>
@@ -155,7 +155,7 @@
 
         setTimeout(function(){
           this.mainLoop();
-        }.bind(this), 30);
+        }.bind(this), 300);
       },
 
 
