--- a/src/life-app/life-app.html
+++ b/src/life-app/life-app.html
@@ -5,16 +5,17 @@
 
 <dom-module id="life-app">
   <template>
-    <life-canvas app="{{app}}"></life-canvas>
+    <life-canvas app="{{app}}" style="float: left"></life-canvas>
     <!-- <nav>
       <paper-button on-tap="handleTap" hogedata="hehe">Heavy Weight Spaceship</paper-button>
     </nav> -->
-    <paper-listbox on-iron-select="handleItemChange" selected="0">
+    <paper-listbox on-iron-select="handleItemChange" selected="0" style="float: left;">
       <paper-item id="pencil">Pencil</paper-item>
       <paper-item id="glider">Glider</paper-item>
       <paper-item id="light_weight_spaceship">Light Weight Spaceship</paper-item>
       <paper-item id="medium_weight_spaceship">Medium Weight Spaceship</paper-item>
       <paper-item id="heavy_weight_spaceship">Heavy Weight Spaceship</paper-item>
+      <paper-item id="glider_gun">Glider Gun</paper-item>
     </paper-listbox>
 
   </template>
@@ -57,6 +58,16 @@
           "1000000",
           "1000001",
           "1111110"];
+        this.app.catalog.glider_gun = [
+          "000000000000000000000000100000000000",
+          "000000000000000000000010100000000000",
+          "000000000000110000001100000000000011",
+          "000000000001000100001100000000000011",
+          "110000000010000010001100000000000000",
+          "110000000010001011000010100000000000",
+          "000000000010000010000000100000000000",
+          "000000000001000100000000000000000000",
+          "000000000000110000000000000000000000"];
       },
 
       handleTap: function(e, detail) {
