--- a/src/life-app/life-app.html
+++ b/src/life-app/life-app.html
@@ -16,6 +16,7 @@
       <paper-item id="medium_weight_spaceship">Medium Weight Spaceship</paper-item>
       <paper-item id="heavy_weight_spaceship">Heavy Weight Spaceship</paper-item>
       <paper-item id="glider_gun">Glider Gun</paper-item>
+      <paper-item id="test">Test</paper-item>
     </paper-listbox>
 
   </template>
@@ -68,6 +69,12 @@
           "000000000010000010000000100000000000",
           "000000000001000100000000000000000000",
           "000000000000110000000000000000000000"];
+        // this.app.catalog.test = "24bo$22bobo$12b2o6b2o12b2o$11bo3bo4b2o12b2o$2o8bo5bo3b2o$2o8bo3bob2o4bobo$10bo5bo7bo$11bo3bo$12b2o!";
+        // this.app.catalog.test = "28bo60b$27bobo59b$27bobo18b2o39b$25b3ob2o17b2o39b$24bo64b$25b3ob2o58b$27bob2o58b4$56b2o31b$56b2o31b12$21bo67b$20bobo66b$20bobo66b$18b3ob2o65b$17bo71b$18b3ob2o65b$20bob2o65b3$4bo57b3o24b$3bobo57bo25b$3bobo57bo2bo22b$b3ob2o56bo2bo22b$o63bobo22b$b3ob2o72b2o8b$3bob2o72b2o8b3$63bo        25b$62bobo24b$63bo25b$80bo8b$79bo7b2o$61b4o22b2o$61b2o3bo10bo11b$62bo        4bo9bobo9b$64bob2o10bo10b$65bo23b3$73bobob2o10b$56bo16bobo13b$55b3o17b        o2bo10b$2b2o70bo3bo10b$2b2o51b3o16b4o2b2o7b$56b2ob2o14bo5b2o6b$58bo21b        o8b3$32b3o54b$33bo55b$10b2o21bo2bo52b$10b2o21bo2bo52b$34bobo52b$49b2o        38b$49b2o38b$55bo33b$54b3o32b$33bo19b2ob2o31b$32bobo18bobo33b$33bo19bo        35b3$31b4o54b$31b2o3bo13bo38b$32bo4bo11bobo37b$34bob2o11bo39b$35bo15b        2o36b$52bo36b$49b3o37b$50b2o37b$47bo41b$47b2o40b$47b2o40b$37b2o6b2o42b        $37b2o4b2o44b$43b2obo42b$45b2o42b5$45b2o42b$45b2o!";
+
+        this.app.catalog.test = "2b3o3b3o2b2$o4bobo4bo$o4bobo4bo$o4bobo4bo$2b3o3b3o2b2$2b3o3b3o2b$o4bobo4bo$o4bobo4bo$o4bobo4bo2$2b3o3b3o!";
+        // this.app.catalog.test = "11b2o5b4o$9b2ob2o3bo3bo$9b4o8bo$10b2o5bo2bob2$8bo13b$7b2o8b2o3b$6bo9bo2bo2b$7b5o4bo2bo2b$8b4o3b2ob2o2b$11bo4b2o4b4$18b4o$o2bo13bo3bo$4bo16bo$o3bo12bo2bob$b4o!";
+
       },
 
       handleTap: function(e, detail) {
