--- a/src/life-canvas/life-canvas.html
+++ b/src/life-canvas/life-canvas.html
@@ -160,10 +160,46 @@
         }.bind(this), 30);
       },
 
+      _parseRLE: function(src){
+        if(!src.endsWith('!')){
+          console.log("error! invalid RLE!");
+          return;
+        }
+        var payload = src.substring(0, src.length - 1);
+
+
+        var res =  payload.split("$").map(function(p){
+          // p.match(/(\d)*[bo]/g); // [ '2o', '8b', 'o', '3b', 'o', 'b', '2o', '4b', 'o', 'b', 'o' ]
+
+          return p.match(/(\d)*[bo]/g).reduce(function(accumulator, current, index, array){
+            // current -> '2o', '8b'
+
+            var result = current.match(/(\d*)([bo])/);
+            // result[1] will have the length of result[2] ('o' or 'b'; whether the cell is alive or not)
+            // > var result = '12b'.match(/(\d*)([bo])/);
+            // > result
+            // [ '12b', '12', 'b', index: 0, input: '12b' ]
+
+            if(result[2] === 'o'){
+              return accumulator + "1".repeat(result[1] || 1);
+            }
+            else if(result[2] === 'b'){
+              return accumulator + "0".repeat(result[1] || 1);
+            }
+          },"");
+        });
+        console.log(res);
+        return res;
+      },
+
 
 
       // interface
       injectPattern: function(startX, startY, pattern){
+        if(!Array.isArray(pattern)){
+          pattern = this._parseRLE(pattern);
+        }
+
         // Cell.getCellAt(startX + 1, startY + 0).state = 1;
         // Cell.getCellAt(startX + 2, startY + 1).state = 1;
         // Cell.getCellAt(startX + 0, startY + 2).state = 1;
