--- a/src/life-canvas/life-canvas.html
+++ b/src/life-canvas/life-canvas.html
@@ -161,35 +161,67 @@
       },
 
       _parseRLE: function(src){
-        if(!src.endsWith('!')){
-          console.log("error! invalid RLE!");
-          return;
+        // if(!src.endsWith('!')){
+        //   console.log("error! invalid RLE!");
+        //   return;
+        // }
+        // var payload = src.substring(0, src.length - 1);
+        //
+        //
+        // var res =  payload.split("$").map(function(p){
+        //   // p.match(/(\d)*[bo]/g); // [ '2o', '8b', 'o', '3b', 'o', 'b', '2o', '4b', 'o', 'b', 'o' ]
+        //
+        //   return p.match(/(\d)*[bo]/g).reduce(function(accumulator, current, index, array){
+        //     // current -> '2o', '8b'
+        //
+        //     var result = current.match(/(\d*)([bo])/);
+        //     // result[1] will have the length of result[2] ('o' or 'b'; whether the cell is alive or not)
+        //     // > var result = '12b'.match(/(\d*)([bo])/);
+        //     // > result
+        //     // [ '12b', '12', 'b', index: 0, input: '12b' ]
+        //
+        //     if(result[2] === 'o'){
+        //       return accumulator + "1".repeat(result[1] || 1);
+        //     }
+        //     else if(result[2] === 'b'){
+        //       return accumulator + "0".repeat(result[1] || 1);
+        //     }
+        //   },"");
+        // });
+        // // console.log(res);
+        // return res;
+
+
+        var result = [];
+        var line = "";
+        for(var pattern = src; pattern.length > 0; pattern = pattern.substring(consumed.length)){
+          var regexResult = pattern.match(/(\d*)([bo\$!])/);
+
+          var consumed = regexResult[0];
+          var length = regexResult[1];
+          var type = regexResult[2];
+
+          if(type === 'o'){
+            line += "1".repeat(length || 1);
+          }
+          else if(type === 'b'){
+            line += "0".repeat(length || 1);
+          }
+          else if(type === '$'){
+            for(var i = length || 1; i > 0; i--){
+              result.push(line);
+              line = "";
+            }
+          }
+          else if(type === '!'){
+            result.push(line);
+            break;
+          }
         }
-        var payload = src.substring(0, src.length - 1);
 
+        // console.log(result);
+        return result;
 
-        var res =  payload.split("$").map(function(p){
-          // p.match(/(\d)*[bo]/g); // [ '2o', '8b', 'o', '3b', 'o', 'b', '2o', '4b', 'o', 'b', 'o' ]
-
-          return p.match(/(\d)*[bo]/g).reduce(function(accumulator, current, index, array){
-            // current -> '2o', '8b'
-
-            var result = current.match(/(\d*)([bo])/);
-            // result[1] will have the length of result[2] ('o' or 'b'; whether the cell is alive or not)
-            // > var result = '12b'.match(/(\d*)([bo])/);
-            // > result
-            // [ '12b', '12', 'b', index: 0, input: '12b' ]
-
-            if(result[2] === 'o'){
-              return accumulator + "1".repeat(result[1] || 1);
-            }
-            else if(result[2] === 'b'){
-              return accumulator + "0".repeat(result[1] || 1);
-            }
-          },"");
-        });
-        console.log(res);
-        return res;
       },
 
 
