--- a/src/life-app/life-app.html
+++ b/src/life-app/life-app.html
@@ -8,33 +8,32 @@
 
 <dom-module id="life-app">
   <template>
-    <div>
-      <life-canvas app="{{app}}" style="float: left"></life-canvas>
-      <!-- <nav>
-        <paper-button on-tap="handleTap" hogedata="hehe">Heavy Weight Spaceship</paper-button>
-      </nav> -->
-      <paper-listbox on-iron-select="handleItemChange" selected="0" style="float: left;">
-        <paper-item id="pencil">Pencil</paper-item>
-        <paper-item id="glider">Glider</paper-item>
-        <paper-item id="light_weight_spaceship">Light Weight Spaceship</paper-item>
-        <paper-item id="medium_weight_spaceship">Medium Weight Spaceship</paper-item>
-        <paper-item id="heavy_weight_spaceship">Heavy Weight Spaceship</paper-item>
-        <paper-item id="glider_gun">Glider Gun</paper-item>
-        <paper-item id="test">Test</paper-item>
+    <div style="float: left">
+      <life-canvas app="{{app}}"></life-canvas>
 
-
-        <template is="dom-repeat" items="{{app.localCatalog}}">
-          <paper-item id="{{item.name}}">{{item.name}}</paper-item>
-        </template>
-
-
-      </paper-listbox>
+      <nav>
+        <paper-button id="togglecontroller" on-tap="handleTap" toggles style="float: left;">Pause</paper-button>
+        <paper-slider value="{{app.controller.refreshRate}}" min="20" max="300" editable style="float: left; min-width: 300px;"></paper-slider>
+        <!--                    ^ Awesome!! ^ -->
+        <paper-button id="clearcontroller" on-tap="handleClear" toggles style="float: left;">Clear</paper-button>
+      </nav>
     </div>
-    <nav style="clear: both;">
-      <paper-button id="togglecontroller" on-tap="handleTap" toggles style="float: left;">Pause</paper-button>
-      <paper-slider value="{{app.controller.refreshRate}}" min="20" max="300" editable style="float: left; min-width: 300px;"></paper-slider>
-      <!--                    ^ Awesome!! ^ -->
-    </nav>
+
+    <paper-listbox on-iron-select="handleItemChange" selected="0" style="float: left; height: 100vh; overflow-y: scroll;">
+      <paper-item id="pencil">Pencil</paper-item>
+      <paper-item id="glider">Glider</paper-item>
+      <paper-item id="light_weight_spaceship">Light Weight Spaceship</paper-item>
+      <paper-item id="medium_weight_spaceship">Medium Weight Spaceship</paper-item>
+      <paper-item id="heavy_weight_spaceship">Heavy Weight Spaceship</paper-item>
+      <paper-item id="glider_gun">Glider Gun</paper-item>
+      <paper-item id="test">Test</paper-item>
+
+
+      <template is="dom-repeat" items="{{app.localCatalog}}">
+        <paper-item id="{{item.name}}">{{item.name}}</paper-item>
+      </template>
+    </paper-listbox>
+
 
 
     <iron-ajax auto url="../../patterns.json" handle-as="json" on-response="handleResponse"></iron-ajax>
@@ -142,6 +141,10 @@
 
         this.$.togglecontroller.textContent = (this.app.controller.isRunning ?  "Resume" : "Pause");
         this.app.controller.isRunning = !this.app.controller.isRunning;
+      },
+
+      handleClear: function(e, datail) {
+        document.querySelector('life-canvas').clearCanvas();
       },
 
       handleItemChange: function(e){
